# ai-gw

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .trufflehog3.yml  CLAUDE.md  Dockerfile.admin  Dockerfile.portal  Makefile  README.md  SECURITY.md  gw  landing.html  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json
services/admin/: Dockerfile  alembic.ini  pyproject.toml  tools_catalog.json
services/admin/.claude-flow/data/: pending-insights.jsonl
services/admin/.claude-flow/sessions/: current.json
services/admin/app/: api_keys.py  audit.py  auth.py  config.py  email.py  identity_signing.py  league_client.py  logging_config.py  main.py  mcp_protocol.py  redis_utils.py  scopes.py
services/admin/app/events/: workflow.py
services/admin/app/jobs/: agentic_classifier.py  auto_confirm_asks.py  weekly_digest.py  workday_sync.py
services/admin/app/llm/: champion_intents.py  champion_metadata.py  champion_rag.py
services/admin/app/models/: agent.py  api_key.py  area.py  area_policy.py  audit_log.py  mcp.py  member.py  model_registry.py  org_node.py  plugin.py  policy.py  pricing.py  role_assignment.py  team.py  unit.py  workflow.py  workflow_run.py
services/admin/app/routers/: access_requests.py  admin_auth.py  admin_champions.py  admin_ops.py  agentic_workflows.py  ai_help.py  alerts.py  api_keys.py  areas.py  audit_log.py  budget.py  champions.py  codemate.py  config_api.py  copilot_catalog.py  dashboard.py  dev_auth.py  developers.py  devops_agent.py  entra.py  genai_adoption.py  graphify.py  guardrails.py  identity.py  insights.py  local_groups.py  mcp.py  members.py  memory_admin.py  model_registry.py  nodes.py  plugins.py  policies.py  portal.py  portrait.py  pricing.py  prompts.py  public_status.py  reports.py  requests.py  (+13 more)
services/admin/app/templates/: api_keys.html  audit_log.html  base.html  dashboard.html  model_registry.html  portal_agents.html  portal_base.html  portal_dashboard.html  portal_keys.html  portal_landing.html  portal_login.html  portal_profile.html  portal_quickstart.html  portal_signup.html  portal_teams.html  portal_usage.html  pricing.html  settings.html  system_health.html  teams.html
services/admin/app/workers/: optimization_worker.py
services/admin/migrations/: env.py
services/admin/migrations/versions/: 0001_baseline.py  0002_workflow_designer_agents_workflows.py  0012_units.py  (+41 more)
services/admin/scripts/: create_local_account.py  e2e_smoke.py  seed_workday_org.py  verify_internal_access.py
services/admin/tests/: conftest.py  test_admin.py  test_admin_champions.py  test_agentic_workflows_router.py  test_ai_help_intents.py  test_ai_help_rag.py  test_api_keys.py  test_areas.py  test_auto_confirm_asks.py  test_budget.py  test_champion_metadata.py  test_champions.py  test_dag_validation.py  test_db.py  test_entra.py  test_genai_adoption.py  test_graphify.py  test_guardrails.py  test_identity_signing.py  test_league_client.py  test_local_groups.py  test_mcp_protocol.py  test_members.py  test_nodes.py  test_permissions.py  test_policies.py  test_portrait.py  test_public_status.py  test_scanner_router.py  test_teams.py  test_tools_router.py
services/agent-relay/: Dockerfile  conftest.py  pyproject.toml
services/agent-relay/app/: config.py  logging_config.py  main.py
services/agent-relay/tests/: conftest.py  test_relay.py
services/auth/: Dockerfile  pyproject.toml
services/auth/app/: config.py  main.py  observability.py  rate_limiter.py  router.py
services/auth/tests/: conftest.py  test_router.py  test_validators.py
services/cache/: Dockerfile  conftest.py  pyproject.toml
services/cache/app/: autoroute.py  config.py  exact.py  guardrails.py  main.py  policy.py  router.py  semantic.py
services/cache/tests/: conftest.py  test_autoroute.py  test_cache.py  test_guardrails.py  test_intent_routing.py  test_policy.py  test_router.py  test_semantic.py  test_streaming.py
services/graphify/: Dockerfile  conftest.py  pyproject.toml
services/graphify/app/: auth.py  builder.py  config.py  db.py  main.py  query.py  worker.py
services/graphify/tests/: conftest.py  test_build.py  test_mcp.py  test_repos.py
services/identity/: Dockerfile  conftest.py  pyproject.toml
services/identity/app/: config.py  main.py
services/identity/tests/: conftest.py  test_identity.py  test_verify_token.py
services/league/: Dockerfile  conftest.py  pyproject.toml
services/league/app/: auth.py  config.py  db.py  logging_config.py  main.py  scoring.py  seed_data.py
services/league/tests/: conftest.py  test_challenges.py  test_creativity.py  test_internal_points.py  test_leaderboard.py  test_proposals.py  test_scoring.py  test_seasons.py  test_store.py  test_submissions.py
services/librarian/: Dockerfile  conftest.py  pyproject.toml
services/librarian/app/: auth.py  config.py  main.py
services/librarian/tests/: conftest.py  test_ingest.py  test_mcp.py  test_ready.py
services/memory/: Dockerfile  conftest.py  pyproject.toml
services/memory/app/: auth.py  config.py  main.py  store.py
services/memory/tests/: conftest.py  test_handlers.py  test_mcp.py  test_ready.py
services/observability/: Dockerfile  conftest.py  pyproject.toml
services/observability/app/: bus.py  config.py  github_webhook.py  main.py  models.py  redis_utils.py  router.py
services/observability/tests/: conftest.py  test_cost_anomaly.py  test_postgres_worker.py  test_router.py  test_session_quality.py  test_workers.py
services/scanner/: Dockerfile  conftest.py  pyproject.toml
services/scanner/app/: auth.py  config.py  db.py  main.py  redis_utils.py
services/scanner/docker/: Dockerfile.garak
services/scanner/tests/: conftest.py  test_aca_job_runner.py  test_jobs.py  test_parsers.py
services/workflow-worker/: Dockerfile  pyproject.toml
services/workflow-worker/app/: config.py  dag.py  events.py  main.py  sanitizer.py  threat_detection.py
services/workflow-worker/tests/: conftest.py  test_aca_job_runtime.py  test_acceptance.py  test_canvas_e2e.py  test_chaos.py  test_dag.py  test_sanitizer.py  test_smoke.py
(+511 files in other folders)
