[project]
name = "ai-gateway-admin"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]~=2.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "authlib~=1.3",
    "httpx>=0.27",
    "redis[hiredis]>=5.0",
    "bcrypt>=4.0",
    "cryptography>=42.0",
    "PyJWT>=2.8",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx", "pytest-mock", "testcontainers[postgres]>=4.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
