[project]
name = "ai-gateway-admin"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.138",
    "uvicorn[standard]>=0.49.0",
    "azure-monitor-opentelemetry>=1.8.8",
    "pydantic-settings>=2.14.2",
    "sqlalchemy[asyncio]~=2.0",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "alembic>=1.18.4",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "authlib~=1.7",
    "httpx>=0.28.1",
    "redis[hiredis]>=8.0.1",
    "bcrypt>=5.0.0",
    "cryptography>=49.0.0",
    "PyJWT>=2.13.0",
    "apscheduler>=3.11.2",
    "prometheus-client>=0.25.0",
    "python-json-logger>=4.1.0,<5",
]

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0", "httpx", "pytest-mock", "testcontainers[postgres]>=4.14.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
