[project]
name = "ai-gateway-agent-relay"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.137",
    "uvicorn[standard]>=0.49.0",
    "pydantic-settings>=2.14.2",
    "redis[asyncio]>=8.0.0",
    "httpx>=0.28.1",
]
[project.optional-dependencies]
dev = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0", "pytest-mock", "httpx>=0.28.1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["app"]
