[project]
name = "ai-gateway-agent-relay"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "redis[asyncio]>=5.0",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "python-json-logger>=2.0,<3",
]
[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-mock", "httpx>=0.27"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["app"]
