[project]
name = "ai-gateway-auth"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.111",
    "uvicorn[standard]>=0.30",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "python-jose[cryptography]==3.3.0",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx", "pytest-mock"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
