[project]
name = "ai-gateway-auth"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.111",
    "uvicorn[standard]>=0.30",
    "redis[hiredis]>=5.0",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "PyJWT[cryptography]>=2.8",
    "asyncpg>=0.29",
    "azure-monitor-opentelemetry>=1.6",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "prometheus-fastapi-instrumentator>=7.0",
    "python-json-logger>=2.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx", "pytest-mock"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
