[project]
name = "ai-gateway-graphify"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.138",
    "uvicorn[standard]>=0.49.0",
    "pydantic-settings>=2.14.2",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "prometheus-client>=0.25.0",
    "python-json-logger>=4.1.0,<5",
    # The knowledge-graph engine. Full scope: code (tree-sitter, offline) plus
    # docs/PDF/office/SQL/audio/video extraction. `openai` lets `graphify extract`
    # route extraction LLM calls at our gateway (OPENAI_BASE_URL=cache:8002/v1).
    "graphifyy[openai,pdf,office,video,sql]>=0.8.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "testcontainers[postgres]>=4.14.2",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
