[project]
name = "ai-gateway-librarian"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "asyncpg>=0.29",
    "redis[asyncio]>=5.0",
    "httpx>=0.27",
    "openai>=1.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
