[project]
name = "ai-gateway-memory"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.138",
    "uvicorn[standard]>=0.49.0",
    "pydantic-settings>=2.14.2",
    "asyncpg>=0.31.0",
    "httpx>=0.28.1",
    "openai>=2.43.0",
    "numpy>=2.4.6",
    "prometheus-client>=0.25.0",
    "python-json-logger>=4.1.0,<5",
]
[project.optional-dependencies]
dev = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0", "httpx>=0.28.1"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build.targets.wheel]
packages = ["app"]
[tool.pytest.ini_options]
asyncio_mode = "auto"
