[project]
name = "ai-gateway-workflow-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "redis[hiredis]>=8.0.0",
    "aiodocker>=0.27.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "azure-mgmt-appcontainers>=4.0.0",
    "azure-identity>=1.25.3",
    "azure-storage-file-share>=12.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
