[project]
name = "ai-gateway-workflow-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.29",
    "redis[hiredis]>=5.0",
    "aiodocker>=0.23",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "azure-mgmt-appcontainers>=3.0",
    "azure-identity>=1.16",
    "azure-storage-file-share>=12.16",
    "python-json-logger>=2.0,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
